fix(PRS-2560): fixed toolbar overflow

--- a/assets/_sass/_structure.scss
+++ b/assets/_sass/_structure.scss
@@ -33,7 +33,6 @@
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    overflow: hidden;
     padding: 0;
     display: flex;
     flex-direction: column;
